--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="links"><a class="fab fa-2x fa-steam-symbol" target="_blank" href="https://steamcommunity.com/id/danilhatte"></a><a class="fab fa-2x fa-vk" target="_blank" href="https://vk.com/danilhatte"></a><a class="fab fa-2x fa-youtube" target="_blank" href="https://www.youtube.com/c/mrkubu"></a></div>
 			<div class="overlay"><a>Hatte</a></div>
 		</div>
-		<script src="./Официальный сайт MrKuBu!_files/pace.min.js"></script>
+		<script src="./css/pace.min.js"></script>
 	
 
 </body></html>
