--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/all.css">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="icon" href="favicon.ico">
+		<link rel="icon" href="https://raw.githubusercontent.com/DanilHattes/hatte/master/favico.ico">
 		<meta name="application-name" content="Сайт Hatte!">
 		<meta name="theme-color" content="#ffffff">
 	<style type="text/css">/* Chart.js */
