--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <div class="pace-activity"></div></div>
 		<div class="button" style="text-decoration: none; cursor:default;">
-			<div class="links"><a class="fab fa-2x fa-steam-symbol" target="_blank" href="https://steamcommunity.com/id/danilhatte"></a><a class="fab fa-2x fa-vk" target="_blank" href="https://vk.com/killcommm"></a><a class="fab fa-2x fa-youtube" target="_blank" href="https://www.youtube.com/channel/UCPk5zblJLM5qXxdEnKMXECA"></a></div>
+			<div class="links"><a class="fab fa-2x fa-steam-symbol" target="_blank" href="https://steamcommunity.com/id/hattexd"></a><a class="fab fa-2x fa-vk" target="_blank" href="https://vk.com/killcommm"></a><a class="fab fa-2x fa-youtube" target="_blank" href="https://www.youtube.com/channel/UCPk5zblJLM5qXxdEnKMXECA"></a></div>
 			<div class="overlay"><a>Hatte</a></div>
 		</div>
 		<script src="css/pace.min.js"></script>
